--- a/public/assets/landing/css/style.css
+++ b/public/assets/landing/css/style.css
@@ -1387,7 +1387,7 @@ body.rtls .ibox-title h5 {
 
 }
 
-.escudo{
+.escudo,.escudo2,.escudo3{
   display: inline-block;
   border-radius: 50%;
   border:1px solid #3d4d5d;
@@ -1396,16 +1396,52 @@ body.rtls .ibox-title h5 {
   -webkit-box-shadow: rgb(0, 0, 0) 1px 2px 10px 0px;
 }
 
-.escudo img{
+.escudo img,.escudo2 img,.escudo3 img{
   border-radius: 50%;
 }
 
+/*.escudo,.escudo3{*/
+  /*margin-left: 20px;*/
+  /*margin-bottom: 30px;*/
+/*}*/
+
+.escudo2{
+  margin-left: -20px;
+}
+
+.escudo3{
+  border:2px solid rgb(204, 204, 204);
+  box-shadow: rgba(109,109,109,1) 1px 1px 16px 1px;
+  -moz-box-shadow: rgba(109,109,109,1) 1px 1px 16px 1px;
+  -webkit-box-shadow: rgba(109,109,109,1) 1px 1px 16px 1px;
+}
+
 .link-default{
-  color: rgb(150, 150, 150);
+  color: rgb(103, 103, 103);
 }
 
 .link-default:hover{
   color: rgb(203, 203, 203);
   text-decoration: none;
 
+}
+
+.well{
+  background-color: rgba(153, 203, 219, 0.18);
+  border-color: rgba(13, 158, 240, 0.49);
+}
+
+.well h3{
+  text-transform: uppercase;
+  color: #3d4d5d;
+  font-weight: bold;
+  text-shadow: 2px 2px rgba(105, 141, 158, 0.78);
+}
+
+.well em{
+  font-size:12px;
+}
+
+.well p{
+  color: rgb(116, 116, 116);
 }
