--- a/public/assets/unicase/css/main.css
+++ b/public/assets/unicase/css/main.css
@@ -2525,22 +2525,36 @@ a {
   border-right: 1px solid #dadada;
 }
 .tag {
-  font-size: 13px;
+  font-size: 11px;
   font-weight: 700;
-  line-height: 38px;
-  width: 40px;
-  height: 40px;
+  line-height: 11px;
   text-transform: uppercase;
-  top: 2.5%;
+  top: 25.5%;
   z-index: 100;
-  -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
-  border-radius: 50px;
   color: #fff;
   right: 25px;
-  /*11px;*/
   text-align: center;
+  padding: 10px;
 }
+/*.tag {*/
+  /*font-size: 13px;*/
+  /*font-weight: 700;*/
+  /*line-height: 38px;*/
+  /*width: 40px;*/
+  /*height: 40px;*/
+  /*text-transform: uppercase;*/
+  /*top: 2.5%;*/
+  /*z-index: 100;*/
+  /*-webkit-border-radius: 50px;*/
+  /*-moz-border-radius: 50px;*/
+  /*border-radius: 50px;*/
+  /*color: #fff;*/
+  /*right: 25px;*/
+  /*/!*11px;*!/*/
+  /*text-align: center;*/
+/*}*/
+
 .tag span {
   position: relative;
   z-index: 100;
@@ -5219,4 +5233,27 @@ a {
 
 #iframeFace{
   min-height:280px;
+}
+
+
+img.byn{
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+
+  -webkit-transition: all 0.5s linear 0s;
+  -moz-transition: all 0.5s linear 0s;
+  -o-transition: all 0.5s linear 0s;
+  transition: all 0.5s linear 0s;
+}
+
+img.byn:hover{
+  filter: grayscale(0);
+  -webkit-filter: grayscale(0);
+  -moz-filter: grayscale(0);
+
+  -webkit-transition: all 0.5s linear 0s;
+  -moz-transition: all 0.5s linear 0s;
+  -o-transition: all 0.5s linear 0s;
+  transition: all 0.5s linear 0s; 
 }
