--- a/public/assets/unicase/css/main.css
+++ b/public/assets/unicase/css/main.css
@@ -5219,6 +5219,10 @@ a {
   margin-top: -32px !important;
 }
 
+.mt-n81{
+  margin-top: -81px !important;
+}
+
 .mt-10{
   margin-top:10px !important;
 }
