--- a/public/assets/unicase/css/main.css
+++ b/public/assets/unicase/css/main.css
@@ -5355,3 +5355,13 @@ img.byn:hover{
   }
 
 }
+
+.p5{
+  padding-top:5px;
+  padding-bottom:5px;
+}
+
+.promoDetail {
+  background-color: #ff6c6c !important;
+  color: #fff !important;
+}
