--- a/public/assets/unicase/css/main.css
+++ b/public/assets/unicase/css/main.css
@@ -1071,7 +1071,7 @@ a {
   -webkit-border-radius: 5px 0 0 5px;
   -moz-border-radius: 5px 0 0 5px;
   border-radius: 5px 0 0 5px;
-  padding: 13px;
+  padding: 12px;
   width: 67%;
 }
 .main-header .top-search-holder .search-area .categories-filter {
@@ -1124,6 +1124,7 @@ a {
   padding: 12px 19px 13px;
   text-align: center;
   background: #f6f6f6;
+  border:none;
   border-left: 1px solid #E0E0E0;
 }
 .main-header .top-search-holder .search-area .search-button:after {
