equipos y formulario de inscripcion con correccion de charset

--- a/public/assets/web/new/css/theme.css
+++ b/public/assets/web/new/css/theme.css
@@ -14294,7 +14294,7 @@ q {
 .map-wrap .contact-form label {
   display: none;
 }
-.map-wrap .contact-form input[type='text'] {
+.map-wrap .contact-form input[type='text'], .map-wrap .contact-form input[type='password'], .map-wrap .contact-form select, .map-wrap .contact-form input[type='file'] {
   margin: 0;
   width: 370px;
   height: 38px;
