--- a/public/assets/web/new/css/theme.css
+++ b/public/assets/web/new/css/theme.css
@@ -15508,7 +15508,7 @@ ul.uk-switcher {
   margin-top: 150px;
 }
 .tt-offline {
-  background: url("../images/offline-bg.jpg") 50% 50%;
+  background: url("../../../../images/offline-bg.jpg") 50% 50%;
   background-size: cover;
 }
 .tm-offline {
