--- a/resources/views/tfc/web/new/index.html
+++ b/resources/views/tfc/web/new/index.html
@@ -19,13 +19,40 @@
 
 <body class="uk-height-1-1 uk-vertical-align uk-text-center tt-offline">
     <div class="offline-logo">
-        <div class="wrap"><img src="images/logo-white.png" alt="The Futbol Company"></div>
+        <div class="wrap"></div>
     </div>
     <div class="uk-panel uk-width-1-1 uk-panel-box uk-vertical-align-middle message-offline uk-container-center">
         <div id="system-message-container"></div>
-        <p>Seleccione <span class="mes-color">su Torneo</span></p><br><br><br><br><br>
-        <a href="http://thefutbolcompany.com/5/torneos/27"><img src="images/copa01.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/25"><img src="images/copa02.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/24"><img src="images/copa03.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/26"><img src="images/copa04.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/29"><img src="images/copa05.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/28"><img src="images/copa06.png" alt="The Futbol Company" width="7%"></a><br><br>
-    </div>
+
+        <img src="images/logo-white.png" alt="The Futbol Company" width="30%">
+        <br><br><br><br><font size="4"><p>Selecciona <span class="mes-color">tu Torneo</span></p></font><br>
+
+
+
+
+<table align="center" width="50%" border="0" class="table">
+  <tbody>
+    <tr>
+      <td><a href="http://thefutbolcompany.com/5/torneos/27"><img src="images/copa01.png" alt="The Futbol Company"></a></td>
+      <td><a href="http://thefutbolcompany.com/5/torneos/25"><img src="images/copa02.png" alt="The Futbol Company"></a></td>
+      <td><a href="http://thefutbolcompany.com/5/torneos/24"><img src="images/copa03.png" alt="The Futbol Company"></a></td>
+      <td><a href="http://thefutbolcompany.com/5/torneos/26"><img src="images/copa04.png" alt="The Futbol Company"></a></td>
+      <td><a href="http://thefutbolcompany.com/5/torneos/29"><img src="images/copa05.png" alt="The Futbol Company"></a></td>
+      <td><a href="http://thefutbolcompany.com/5/torneos/28"><img src="images/copa06.png" alt="The Futbol Company"></a></td>
+    </tr>
+    <tr>
+      <td><font size="4">La Liga</font></td>
+      <td><font size="4">Liga Calcio</font></td>
+      <td><font size="4">Liga Premier</font></td>
+      <td><font size="4">Bundesliga</font></td>
+      <td><font size="4">Le championnat</font></td>
+      <td><font size="4">TFC Champions</font></td>
+    </tr>
+  </tbody>
+</table>
+
+
+
     
    
 
