--- a/resources/views/tfc/web/new/index2.html
+++ b/resources/views/tfc/web/new/index2.html
@@ -2,7 +2,7 @@
 <html lang="en-gb" class="uk-height-1-1">
 
 <head>
-    <base href="{!! asset('assets/web/new/asd') !!}">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,39 +19,12 @@
 
 <body class="uk-height-1-1 uk-vertical-align uk-text-center tt-offline">
     <div class="offline-logo">
-        <div class="wrap"></div>
+        <div class="wrap"><img src="images/logo-white.png" alt="The Futbol Company"></div>
     </div>
     <div class="uk-panel uk-width-1-1 uk-panel-box uk-vertical-align-middle message-offline uk-container-center">
         <div id="system-message-container"></div>
-
-        <img src="../../../images/logo-white.png" alt="The Futbol Company" width="30%">
-        <br><br><br><br><font size="4"><p>Selecciona <span class="mes-color">tu Torneo</span></p></font><br>
-
-
-
-
-        <table align="center" width="50%" border="0" class="table">
-          <tbody>
-            <tr>
-              <td><a href="{!! route('new.torneos',[5,27]) !!}"><img src="../../../images/copa01.png" alt="The Futbol Company"></a></td>
-              <td><a href="{!! route('new.torneos',[5,25]) !!}"><img src="../../../images/copa02.png" alt="The Futbol Company"></a></td>
-              <td><a href="{!! route('new.torneos',[5,24]) !!}"><img src="../../../images/copa03.png" alt="The Futbol Company"></a></td>
-              <td><a href="{!! route('new.torneos',[5,26]) !!}"><img src="../../../images/copa04.png" alt="The Futbol Company"></a></td>
-              <td><a href="{!! route('new.torneos',[5,29]) !!}"><img src="../../../images/copa05.png" alt="The Futbol Company"></a></td>
-              <td><a href="{!! route('new.torneos',[5,28]) !!}"><img src="../../../images/copa06.png" alt="The Futbol Company"></a></td>
-            </tr>
-            <tr>
-              <td style="font-size:14px;">La Liga</td>
-              <td style="font-size:14px;">Liga Calcio</td>
-              <td style="font-size:14px;">Liga Premier</td>
-              <td style="font-size:14px;">Bundesliga</td>
-              <td style="font-size:14px;">Le championnat</td>
-              <td style="font-size:14px;">TFC Champions</td>
-            </tr>
-          </tbody>
-        </table>
-
-
+        <p>Seleccione <span class="mes-color">su Torneo</span></p><br><br><br><br><br>
+        <a href="http://thefutbolcompany.com/5/torneos/27"><img src="images/copa01.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/25"><img src="images/copa02.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/24"><img src="images/copa03.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/26"><img src="images/copa04.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/29"><img src="images/copa05.png" alt="The Futbol Company" width="7%"></a><a href="http://thefutbolcompany.com/5/torneos/28"><img src="images/copa06.png" alt="The Futbol Company" width="7%"></a><br><br>
     </div>
     
    
