--- a/public/assets/web/new/css/theme.css
+++ b/public/assets/web/new/css/theme.css
@@ -11333,18 +11333,18 @@ q {
 
 
 }
-.article-single-text {
-  padding: 27px 0;
+.article-single-text3 {
+  padding: 28px 0;
   color: #a6a6a6;
   font-size: 15px;
   line-height: 22px;
   font-family: 'Work Sans';
 }
-.article-single-text p {
+.article-single-text3 p {
   padding-left: 29px;
   padding-right: 29px;
 }
-.article-single-text blockquote {
+.article-single-text3 blockquote {
   margin: 13px 0 14px 0;
   padding: 25px 20px 23px 30px;
   position: relative;
@@ -11356,11 +11356,11 @@ q {
   color: #ffc722;
   background: #ffc722;
 }
-.article-single-text blockquote span {
+.article-single-text3 blockquote span {
   position: relative;
   z-index: 1;
 }
-.article-single-text blockquote:before {
+.article-single-text3 blockquote:before {
   content: '';
   width: 80px;
   height: 57px;
@@ -11370,7 +11370,7 @@ q {
   left: 0;
   opacity: 0.1;
 }
-.article-single-text blockquote:after {
+.article-single-text3 blockquote:after {
   content: '';
   width: 80px;
   height: 57px;
@@ -11380,12 +11380,12 @@ q {
   right: 0;
   opacity: 0.1;
 }
-.article-single-text table {
+.article-single-text3 table {
   margin: 17px 0 15px 0;
   width: 100%;
   text-align: left;
 }
-.article-single-text table tr th {
+.article-single-text3 table tr th {
   padding-left: 30px;
   height: 46px;
   font-size: 15px;
@@ -11394,15 +11394,15 @@ q {
   background: #363533;
   font-weight: normal;
 }
-.article-single-text table tr:hover td {
+.article-single-text3 table tr:hover td {
   background: #363533;
   color: #363533;
   border-color: #363533;
 }
-.article-single-text table tr th:nth-child(even) {
+.article-single-text3 table tr th:nth-child(even) {
   background: #363533;
 }
-.article-single-text tr td {
+.article-single-text3 tr td {
   padding-left: 30px;
   height: 46px;
   border: solid #e9e9e9;
@@ -11413,10 +11413,10 @@ q {
 
 
 }
-.article-single-text tr:nth-child(odd) td {
+.article-single-text3 tr:nth-child(odd) td {
   background: #363533;
 }
-.article-single-text tr td:first-child {
+.article-single-text3 tr td:first-child {
   border-width: 0 1px 1px 1px;
 }
 
