--- a/resources/views/tfc/web/new/index.html
+++ b/resources/views/tfc/web/new/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Futbol Company. Profesionales en Futbol Amateurs.</title>
+    <title>The Futbol Company. Profesionales en Futbol Amateurs..</title>
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link href="images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
     <link href="css/akslider.css" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
         <div id="system-message-container"></div>
 
         <img src="images/logo-white.png" alt="The Futbol Company" width="30%">
-        <br><br><br><br><font size="4"><p>Selecciona <span class="mes-color">tu Torneo</span></p></font><br>
+        <br><br><br><br><font size="4"><p>Selecciona <span class="mes-color">tu Torneo.</span></p></font><br>
 
 
 
@@ -45,7 +45,7 @@
       <td><font size="4">Liga Calcio</font></td>
       <td><font size="4">Liga Premier</font></td>
       <td><font size="4">Bundesliga</font></td>
-      <td><font size="4">Le championnat</font></td>
+      <td><font size="4">Le Championnat</font></td>
       <td><font size="4">TFC Champions</font></td>
     </tr>
   </tbody>
