--- a/public/assets/web/new/css/theme.css
+++ b/public/assets/web/new/css/theme.css
@@ -11419,7 +11419,7 @@ q {
 
 
 
-/**************** TABLA POSICIONES ****************/
+/**************** TABLA POSICIONES FINAL ****************/
 
 
 }
